<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.Button10">

    <ProgressBar
        android:id="@+id/staticBar10"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="347dp"
        android:layout_height="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="572dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="176dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="536dp"
        android:text="До конца вопроса"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sek10"
        android:layout_width="115dp"
        android:layout_height="36dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="536dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button102"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="2dp"
        android:text="@string/variant2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button101" />

    <Button
        android:id="@+id/button105"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="2dp"
        android:text="@string/variant5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button104" />

    <Button
        android:id="@+id/button106"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="22dp"
        android:text="@string/variant6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button105" />

    <Button
        android:id="@+id/button107"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="2dp"
        android:text="@string/variant7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button106" />

    <Button
        android:id="@+id/button101"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="24dp"
        android:text="@string/variant1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button103"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="2dp"
        android:text="@string/variant3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button102" />

    <Button
        android:id="@+id/button104"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="2dp"
        android:text="@string/variant4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button103" />

    <Button
        android:id="@+id/button108"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="2dp"
        android:text="@string/variant8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button107" />

    <Button
        android:id="@+id/button109"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="2dp"
        android:text="@string/variant9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button108" />

    <Button
        android:id="@+id/button1010"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:text="@string/variant10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button109" />

    <ProgressBar
        android:id="@+id/answerBar10"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="346dp"
        android:layout_height="14dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button106"
        app:layout_constraintTop_toBottomOf="@+id/button105" />
</android.support.constraint.ConstraintLayout>