<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.Button9">

    <ProgressBar
        android:id="@+id/staticBar9"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="347dp"
        android:layout_height="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="572dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="176dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="536dp"
        android:text="До конца вопроса"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sek9"
        android:layout_width="115dp"
        android:layout_height="36dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="536dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button92"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="6dp"
        android:text="@string/variant2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button91" />

    <Button
        android:id="@+id/button93"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="6dp"
        android:text="@string/variant3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button92" />

    <Button
        android:id="@+id/button98"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="6dp"
        android:text="@string/variant8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button97" />

    <Button
        android:id="@+id/button94"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:text="@string/variant4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button93" />

    <Button
        android:id="@+id/button95"
        android:layout_width="346dp"
        android:layout_height="51dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="6dp"
        android:text="@string/variant5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button94" />

    <Button
        android:id="@+id/button96"
        android:layout_width="346dp"
        android:layout_height="53dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="4dp"
        android:text="@string/variant6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerBar9" />

    <Button
        android:id="@+id/button97"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="6dp"
        android:text="@string/variant7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button96" />

    <Button
        android:id="@+id/button91"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/variant1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button99"
        android:layout_width="346dp"
        android:layout_height="50dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="6dp"
        android:text="@string/variant9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button98" />

    <ProgressBar
        android:id="@+id/answerBar9"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="346"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button95" />
</android.support.constraint.ConstraintLayout>