<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.Button8">

    <Button
        android:id="@+id/button85"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="4dp"
        android:text="@string/variant5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerBar8" />

    <Button
        android:id="@+id/button86"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/variant6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button85" />

    <Button
        android:id="@+id/button87"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/variant7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button86" />

    <Button
        android:id="@+id/button84"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/variant4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button83" />

    <Button
        android:id="@+id/button88"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/variant8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button87" />

    <Button
        android:id="@+id/button83"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/variant3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button82" />

    <ProgressBar
        android:id="@+id/staticBar8"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="347dp"
        android:layout_height="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="572dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="176dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="536dp"
        android:text="До конца вопроса"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sek8"
        android:layout_width="115dp"
        android:layout_height="36dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="536dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button82"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/variant2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button81" />

    <Button
        android:id="@+id/button81"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/variant1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/answerBar8"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button84" />
</android.support.constraint.ConstraintLayout>