<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".model.Button7">

    <ProgressBar
        android:id="@+id/staticBar7"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="347dp"
        android:layout_height="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="572dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="176dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="536dp"
        android:text="До конца вопроса"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sek7"
        android:layout_width="115dp"
        android:layout_height="36dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="536dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button72"
        android:layout_width="346"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/variant2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button71" />

    <Button
        android:id="@+id/button73"
        android:layout_width="346"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/variant3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button72" />

    <Button
        android:id="@+id/button74"
        android:layout_width="346"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/variant4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button73" />

    <Button
        android:id="@+id/button75"
        android:layout_width="346"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="4dp"
        android:text="@string/variant5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerBar7" />

    <Button
        android:id="@+id/button77"
        android:layout_width="346"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/variant7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button76" />

    <Button
        android:id="@+id/button76"
        android:layout_width="346"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:text="@string/variant6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button75" />

    <Button
        android:id="@+id/button71"
        android:layout_width="346"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="24dp"
        android:text="@string/variant1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/answerBar7"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="346"
        android:layout_height="16dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button74" />

</android.support.constraint.ConstraintLayout>